force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/util_closer_Case_Status_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Rules for automatically updating Case status based on configurable criteria.</description>
    <label>Case Status Rule</label>
    <pluralLabel>Case Status Rules</pluralLabel>
</CustomObject>