force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Additional_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Additional_Filter_Logic__c</fullName>
    <description>Custom filter conditions evaluated against Case fields during rule matching. Supports AND-combined conditions. Only fields included in the batch query are available.</description>
    <inlineHelpText>Enter conditions combined with AND. Syntax: Field = &apos;Value&apos;, Field != &apos;Value&apos;, Field = null, Field != null, Field LIKE &apos;Pattern%&apos;, Field IN (&apos;A&apos;,&apos;B&apos;), Field NOT IN (&apos;A&apos;,&apos;B&apos;), Field = true/false. OR is not supported. Available fields: Id, CaseNumber, Status, Origin, LastModifiedDate, CreatedDate, Owner.Name, LastModifiedBy.Name, RecordType.DeveloperName.</inlineHelpText>
    <label>Additional Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>