force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Child_Filter_Operator__c.field-meta.xml
<CustomField>
    <fullName>Child_Filter_Operator__c</fullName>
    <description>Operator used when comparing the child record field value to the Child Filter Value. Equals is case-sensitive. Contains is case-insensitive.</description>
    <inlineHelpText>Equals: exact match (case-sensitive). Not Equals: does not match exactly. Contains: partial text match (case-insensitive). Is Null: field has no value. Is Not Null: field has any value. Important: Equals is case-sensitive — &apos;closed&apos; will NOT match &apos;Closed&apos;. Use Contains for case-insensitive matching.</inlineHelpText>
    <label>Child Filter Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Is Null</fullName>
            </value>
            <value>
                <fullName>Is Not Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>