force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Days_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Created__c</fullName>
    <description>Minimum days since Case was created. Leave blank to ignore.</description>
    <inlineHelpText>Cases must have been created at least this many days ago.</inlineHelpText>
    <label>Days Since Created</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>