force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <description>Minimum number of days since the last logged Task or Event on the Case (based on LastActivityDate). Requires Activities tracking to be enabled on the Case object. If LastActivityDate is not available or has no value, this check is skipped and the rule can still match. Leave blank to ignore.</description>
    <inlineHelpText>Enter a whole number. The Case must have had no Tasks or Events logged for at least this many days (uses LastActivityDate, not LastModifiedDate). Requires Activities to be enabled on Case. Example: 30 matches cases with no activity in the last 30 days. Leave blank to skip this check.</inlineHelpText>
    <label>Days Since Last Activity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>