force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Exclude_Record_Type_Developer_Names__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Record_Type_Developer_Names__c</fullName>
    <description>Semicolon-separated Case Record Type Developer Names to exclude. Cases with a matching Record Type will be skipped by this rule, even if all other criteria match. Leave blank to exclude no record types.</description>
    <inlineHelpText>Enter Record Type Developer Names separated by semicolons (;) to exclude from this rule. Use the Developer Name (API name), not the display label. Example: Internal_Case;Test_Case. To find Developer Names: Setup &gt; Object Manager &gt; Case &gt; Record Types. Leave blank to exclude no record types.</inlineHelpText>
    <label>Exclude Record Type Developer Names</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>