force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Order in which rules are evaluated. Lower numbers are evaluated first.</description>
    <inlineHelpText>Rules are evaluated in ascending order. Lower values execute first.</inlineHelpText>
    <label>Execution Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>