force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Rule is active and should be evaluated.</description>
    <inlineHelpText>When checked, this rule will be evaluated during batch processing.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>