force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Record_Type_Developer_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Names__c</fullName>
    <description>Semicolon-separated Case Record Type Developer Names to include. Only cases with a matching Record Type will be evaluated by this rule. Leave blank to apply to all record types.</description>
    <inlineHelpText>Enter Record Type Developer Names separated by semicolons (;). Use the Developer Name (API name), not the display label. Example: Support_Case;Billing_Case. To find Developer Names: Setup &gt; Object Manager &gt; Case &gt; Record Types. Leave blank to match all record types.</inlineHelpText>
    <label>Record Type Developer Names</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>