force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Stop_Processing__c.field-meta.xml
<CustomField>
    <fullName>Stop_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non-functional. The engine always uses first-match-wins regardless of this value. Retained on the object for backward compatibility but removed from UI surfaces.</description>
    <inlineHelpText>This field has no effect. The engine always stops at the first matching rule (first-match-wins).</inlineHelpText>
    <label>Stop Processing</label>
    <type>Checkbox</type>
</CustomField>