force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <description>Status value to set when rule matches.</description>
    <inlineHelpText>The status that matching Cases will be updated to.</inlineHelpText>
    <label>Target Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>