force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/listViews/All_Rules.listView-meta.xml
<ListView>
    <fullName>All_Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>Is_Active__c</columns>
    <columns>Execution_Order__c</columns>
    <columns>Source_Status__c</columns>
    <columns>Target_Status__c</columns>
    <columns>Days_Since_Last_Modified__c</columns>
    <columns>Days_Since_Created__c</columns>
    <columns>Days_Since_Last_Activity__c</columns>
    <columns>Description__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules</label>
</ListView>