force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/listViews/Rules_Tnox.listView-meta.xml
<ListView>
    <fullName>Rules_Tnox</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Execution_Order__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rules-Tnox</label>
</ListView>